k8s/apps/calibre/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  labels:
    app: calibre
spec:
  type: ClusterIP
  selector:
    app: calibre
  ports:
    - name: http
      port: 8083
      targetPort: 8083
