k8s/apps/calibre/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  labels:
    app: calibre
spec:
  ingressClassName: cilium
  rules:
    - host: calibre.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  number: 8083
